파이널 프로젝트

--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -14,10 +14,10 @@ pin: true
 팀 원 : **김해린**, 이시우, 고경환, 이정효  
 담당 역할 : 프로젝트 개발  
 수행 업무 :  
-  - 사용자 계정 생성 
-  - 카카오 로그인  
-  - 마이페이지 내 정보 수정, 삭제 구현
-  - 소셜 기능 ( 1대1 팔로잉, 팔로우 )
+  - 출퇴근 시스템 / 근태관리
+  - 휴가 결제 구현
+  - 휴가 관리자 관리
+  - 인사 발령 구현
   - 게시글 작성, 저장 구현 
   - 최종 문서 작성
   
