--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -23,25 +23,16 @@ pin: true
 프로젝트 기간: [프로젝트 기간 기재]
 사용 기술: Spring Framework, JPA, Thymeleaf, MariaDB, HTML/CSS, JavaScript
 
-프로젝트 개요
-
+**프로젝트 개요**
 목적: 회사 내 효율적인 소통과 업무 관리를 지원하기 위한 그룹웨어 시스템 개발
 주요 기능:
-출퇴근 관리: 출근/퇴근 시간 기록 및 조회 기능
-휴가 관리: 휴가 신청, 승인/반려, 잔여 휴가 조회
-전자결재: 업무 보고서 및 결재 문서 작성 및 프로세스 관리
-일정 관리: 개인/부서 일정 등록 및 공유
-게시판: 공지사항, 자유게시판, Q&A 등 사내 커뮤니케이션 지원
-프로젝트에서의 역할 및 기여
+- 출퇴근 관리: 출근/퇴근 시간 기록 및 조회 기능
+- 휴가 관리: 휴가 신청, 승인/반려, 잔여 휴가 조회
+- 전자결재: 업무 보고서 및 결재 문서 작성 및 프로세스 관리
+- 일정 관리: 개인/부서 일정 등록 및 공유
+- 게시판: 공지사항, 자유게시판, Q&A 등 사내 커뮤니케이션 지원
 
-프론트엔드 개발: UI/UX 설계 및 화면 구성
-백엔드 개발: 출퇴근 및 휴가 관리 기능 구현 (DB 설계 및 비즈니스 로직 개발)
-팀워크: 팀원들과 협업하여 코드 리뷰, 문제 해결, 일정 관리
-성과
 
-효율성 증가: 기존 수작업 기반 업무를 자동화하여 시간 절약
-유지보수성 향상: 모듈화된 설계로 확장성과 유지보수 용이성 확보
-포트폴리오: 기업용 시스템 설계 및 구현 능력 입증
 GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.com/kimhaerinring/null_company)  
 최종 Branch : master  
 
@@ -185,15 +176,15 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 [WBS 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1uQJl9_ASPbSN-qPA1adEvE_afG3JeTlwwGDaPCMKUxc/edit?gid=1379820161#gid=1379820161
 [Table 정의서 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1uQJl9_ASPbSN-qPA1adEvE_afG3JeTlwwGDaPCMKUxc/edit?gid=1874875199#gid=1874875199
 
-[프로젝트 주제 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-프로젝트-주제.png
-[프로젝트 진행 일정 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-프로젝트-진행-일정.png
-[요구사항 정의 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-요구사항-정의.png
-[요구사항 정의 해린 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-요구사항-정의 해린.png
-[WBS 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-WBS.png
-[WBS 해린 이미지]: https://kimhaerinring.github.io/assets/img/PIC-MAP-WBS 해린.png
-[데이터베이스 정의 이미지 (ERDCLOUD)]: https://kimhaerinring.github.io/assets/img/PIC-MAP-데이터베이스-정의-ERDCLOUD.png
-[데이터베이스 정의 이미지 (TREE)]: https://kimhaerinring.github.io/assets/img/PIC-MAP-데이터베이스-정의-TREE.png
-[프로젝트 개발 환경 이미지]: https://kimhaerinring.github.io/assets/img/프로젝트개발환경.png
+[프로젝트 주제 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-프로젝트-주제.png
+[프로젝트 진행 일정 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-프로젝트-진행-일정.png
+[요구사항 정의 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-요구사항-정의.png
+[요구사항 정의 해린 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-요구사항-정의 해린.png
+[WBS 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-WBS.png
+[WBS 해린 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany-WBS 해린.png
+[데이터베이스 정의 이미지 (ERDCLOUD)]: https://kimhaerinring.github.io/assets/img/nullcompany-데이터베이스-정의-ERDCLOUD.png
+[데이터베이스 정의 이미지 (TREE)]: https://kimhaerinring.github.io/assets/img/nullcompany-데이터베이스-정의-TREE.png
+[프로젝트 개발 환경 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany프로젝트개발환경.png
 
 [회원가입, 로그인 이미지]: https://kimhaerinring.github.io/assets/img/Join_Login.gif
 [아이디 비밀번호 찾기 이미지]: https://kimhaerinring.github.io/assets/img/FindAccount.gif
