--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -159,18 +159,18 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 
 이 프로젝트를 통해 얻은 경험과 지식은 앞으로의 개발 및 협업에 큰 도움이 될 것입니다. 팀원들과 함께 만든 결과물에 대해 자부심을 느끼며, 다음 단계의 도전이 기대됩니다.  
 
-[프로젝트 개요 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#1-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EC%9A%94
-[프로젝트 주제 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%A3%BC%EC%A0%9C
-[프로젝트 진행 일정 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%A7%84%ED%96%89-%EC%9D%BC%EC%A0%95
-[프로젝트 상세 설계 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#2-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%83%81%EC%84%B8-%EC%84%A4%EA%B3%84
-[요구사항 정의 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%EC%9A%94%EA%B5%AC%EC%82%AC%ED%95%AD-%EC%A0%95%EC%9D%98
-[WBS 링크]: https://kimhaerinring.github.io/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#wbs
+[프로젝트 개요 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#1-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EC%9A%94
+[프로젝트 주제 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%A3%BC%EC%A0%9C
+[프로젝트 진행 일정 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%A7%84%ED%96%89-%EC%9D%BC%EC%A0%95
+[프로젝트 상세 설계 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#2-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%83%81%EC%84%B8-%EC%84%A4%EA%B3%84
+[요구사항 정의 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%EC%9A%94%EA%B5%AC%EC%82%AC%ED%95%AD-%EC%A0%95%EC%9D%98
+[WBS 링크]: https://kimhaerinring.github.io/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#wbs
 [ERDCLOUD 링크]: https://www.erdcloud.com/d/6xv5D2FfbDApxrQHz  
-[데이터베이스 정의 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EC%A0%95%EC%9D%98
-[프로젝트 개발 환경 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD
-[기능 구현 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#3-%EA%B8%B0%EB%8A%A5-%EA%B5%AC%ED%98%84
-[트러블 슈팅 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#4-%ED%8A%B8%EB%9F%AC%EB%B8%94-%EC%8A%88%ED%8C%85
-[느낀점 링크]: https://kimhaerinring.github.io/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#5-%EB%8A%90%EB%82%80%EC%A0%90
+[데이터베이스 정의 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EC%A0%95%EC%9D%98
+[프로젝트 개발 환경 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD
+[기능 구현 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#3-%EA%B8%B0%EB%8A%A5-%EA%B5%AC%ED%98%84
+[트러블 슈팅 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#4-%ED%8A%B8%EB%9F%AC%EB%B8%94-%EC%8A%88%ED%8C%85
+[느낀점 링크]: https://kimhaerinring.github.io/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#5-%EB%8A%90%EB%82%80%EC%A0%90
 
 [요구사항 정의서 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1ku2dC6wREDqjZlxOhhuyzHgqXTy5QwC0TL91EXdQXlM/edit?gid=2111736112#gid=2111736112
 [WBS 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1ku2dC6wREDqjZlxOhhuyzHgqXTy5QwC0TL91EXdQXlM/edit?gid=1090507400#gid=1090507400
