--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -83,11 +83,8 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 ##### **데이터베이스 정의**
 ![데이터베이스 정의 (ERDCLOUD)][데이터베이스 정의 이미지 (ERDCLOUD)]  
 ![데이터베이스 정의 (TREE)][데이터베이스 정의 이미지 (TREE)]  
- - 위는 데이터베이스를 ERD로 표현한 그림과, 해당 데이터 베이스의 계층적 구조를 표현한 그림을 보여줌  
- - 테이블(개체)는 총 12개를 사용하였으며, 시퀀스는 10개를 사용하였음  
+ - 위는 데이터베이스를 ERD로 표현한 그림임.  
  - 데이터 베이스는 2차 정규화까지 진행되었으나, 반정규화를 거친 일부 테이블 외에는 3차 정규화까지 진행되었음   
-[ERDCLOUD][ERDCLOUD 링크]  
-[Table 정의서 스프레드시트][Table 정의서 스프레드시트 링크]  
    
 #### **3. 기능 구현**
 
