--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -87,39 +87,39 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
    
 #### **3. 기능 구현**
 
-![베스트 게시글 및 게시글 디테일][베스트 게시글 및 게시글 디테일 이미지]  
+![로그인 조직관리][로그인 조직관리]  
  - 메인 페이지에 카카오 지도 API를 활용하여 베스트 게시글의 사진을 지도상에 출력  
  - 특정 키워드 내의 베스트 게시글을 검색 가능  
  - 디테일 페이지에서는 게시글의 내용과 해당 게시글 근처 추천 여행지(게시글)를 출력  
  - 계층형 게시글 구조 구현 (부모글, 자식글)   
     
-![베스트 관광지 및 게시글 리스트][베스트 관광지 및 게시글 리스트 이미지]  
+![공지사항][공지사항]  
  - 메인 페이지에 TOUR API를 활용하여 국내 대표 관광지의 사진 및 관련 게시글의 개수를 출력  
  - 검색 기능을 활용하여 다른 키워드 관련 게시글 리스트 출력 가능  
  - 최신순, 추천순 정렬 기능을 활용해 정렬 기준 변경 가능   
    
-![회원가입, 로그인][회원가입, 로그인 이미지]  
+![캘린더][캘린더]  
  - "로그인" 버튼 클릭 시 로그인 모달을 출력, 가입한 계정으로 로그인 가능  
  - 회원가입 버튼 클릭 시 회원가입 모달을 출력, 정보 입력은 정규식으로 검증됨   
    
-![아이디 비밀번호 찾기][아이디 비밀번호 찾기 이미지]  
+![근퇴 관리][근퇴 관리]  
  - "아이디 또는 비밀번호를 잊어버리셨나요?" 링크 클릭시 아이디 찾기 페이지로 이동  
  - 가입시 입력한 이름과 휴대폰번호를 통해 아이디 찾기 가능  
  - "비밀번호 찾기" 링크 클릭시 비밀번호 찾기 페이지로 이동  
  - 아이디, 이름, 휴대폰번호 정보 입력시 비밀번호의 앞 3자리, 뒷 1자리 출력   
    
-![카카오 로그인][카카오 로그인 이미지]  
+![인사발령][인사발령]  
  - 로그인 모달 내부 "카카오 로그인" 버튼 클릭시 카카오 로그인 페이지로 이동  
  - 약관 동의를 마치면 카카오 로그인 API를 활용한 간편 로그인 가능   
    
-![프로필 페이지][프로필 페이지 이미지]  
+![휴가][휴가]  
  - 로그인 후, 프로필 이미지 또는 마이페이지 버튼 클릭시 프로필 페이지로 이동  
  - 사용자가 작성한 게시글을 지도상에 출력  
  - 팔로잉, 팔로워 버튼 클릭시 팔로잉, 팔로워 모달에 리스트 출력  
  - 모달 내부에서 팔로우 기능 활용 가능  
  - 본인이 작성한 게시글과 본인이 저장한 게시글 리스트를 확인 가능   
    
-![게시글 작성][게시글 작성 이미지]  
+![결재][결재]  
  - 프로필 페이지의 "게시글 쓰기" 버튼 또는 전체 게시글 리스트의 "+" 버튼 클릭시 게시글 작성 페이지로 이동  
  - 게시글의 사진, 제목, 위치, 내용 입력 후 등록시 게시글 작성 가능  
  - 게시글 내용 입력은 위지위그 에디터인 썸머노트를 활용하였음  
@@ -182,11 +182,11 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 [데이터베이스 정의 이미지 (TREE)]: https://kimhaerinring.github.io/assets/img/nullcompany-데이터베이스-정의-TREE.png
 [프로젝트 개발 환경 이미지]: https://kimhaerinring.github.io/assets/img/nullcompany프로젝트개발환경.png
 
-[회원가입, 로그인 이미지]: https://kimhaerinring.github.io/assets/img/Join_Login.gif
-[아이디 비밀번호 찾기 이미지]: https://kimhaerinring.github.io/assets/img/FindAccount.gif
-[카카오 로그인 이미지]: https://kimhaerinring.github.io/img/KakaoLogin.gif
-[프로필 페이지 이미지]: https://kimhaerinring.github.io/assets/img/Profile.gif
+[로그인 조직관리]: https://kimhaerinring.github.io/assets/img/Login.gif
+[공지사항]: https://kimhaerinring.github.io/assets/img/Notice.gif
+[캘린더]: https://kimhaerinring.github.io/img/Calender.gif
+[근퇴 관리]: https://kimhaerinring.github.io/assets/img/Profile.gif
 
-[베스트 게시글 및 게시글 디테일 이미지]: https://kimhaerinring.github.io/assets/img/BestReview_TravelDetail.gif
-[베스트 관광지 및 게시글 리스트 이미지]: https://kimhaerinring.github.io/assets/img/BestSpot_TravelList.gif
-[게시글 작성 이미지]: https://kimhaerinring.github.io/assets/img/TravelWrite.gif
+[인사발령]: https://kimhaerinring.github.io/assets/img/Appointment.gif
+[휴가]: https://kimhaerinring.github.io/assets/img/Vacation.gif
+[결재]: https://kimhaerinring.github.io/assets/img/Vacation.gif
