--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -88,42 +88,40 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 #### **3. 기능 구현**
 
 ![로그인 조직관리][로그인 조직관리]  
- - 메인 페이지에 카카오 지도 API를 활용하여 베스트 게시글의 사진을 지도상에 출력  
- - 특정 키워드 내의 베스트 게시글을 검색 가능  
- - 디테일 페이지에서는 게시글의 내용과 해당 게시글 근처 추천 여행지(게시글)를 출력  
- - 계층형 게시글 구조 구현 (부모글, 자식글)   
+ - 로그인 및 사용자 인증: 사용자 계정 관리 및 보안 인증 절차를 통해 시스템 접근 권한 제어.
+ - 조직도 관리: 회사의 조직 구조를 시각적으로 표현하여 부서별 직원 정보 및 직급 파악 가능.
+ - 부서 및 팀 관리: 부서 생성, 수정, 삭제와 팀 편성 기능을 제공하여 유연한 조직 관리 지원.
+
     
 ![공지사항][공지사항]  
- - 메인 페이지에 TOUR API를 활용하여 국내 대표 관광지의 사진 및 관련 게시글의 개수를 출력  
- - 검색 기능을 활용하여 다른 키워드 관련 게시글 리스트 출력 가능  
- - 최신순, 추천순 정렬 기능을 활용해 정렬 기준 변경 가능   
+ - 공지사항 등록 및 관리: 관리자가 공지사항을 작성하고 등록할 수 있으며, 수정 및 삭제 기능 제공.
+ - 중요 공지 고정: 중요도가 높은 공지를 상단에 고정하여 사용자 접근성을 높임.
+ - 조회수 및 피드백 관리: 조회수 집계와 댓글 기능을 통해 사용자 참여와 소통을 지원.   
    
 ![캘린더][캘린더]  
- - "로그인" 버튼 클릭 시 로그인 모달을 출력, 가입한 계정으로 로그인 가능  
- - 회원가입 버튼 클릭 시 회원가입 모달을 출력, 정보 입력은 정규식으로 검증됨   
+ - 개인 및 조직 일정 관리: 개인 일정 외에도 조직 일정 공유 기능으로 협업 강화.
+ - 일정 알림 기능: 설정된 일정에 대한 사전 알림으로 중요한 약속 누락 방지.
+ - 다양한 뷰 옵션: 월간, 주간, 일간 보기 제공으로 유연한 일정 관리 가능.   
    
 ![근퇴 관리][근퇴 관리]  
- - "아이디 또는 비밀번호를 잊어버리셨나요?" 링크 클릭시 아이디 찾기 페이지로 이동  
- - 가입시 입력한 이름과 휴대폰번호를 통해 아이디 찾기 가능  
- - "비밀번호 찾기" 링크 클릭시 비밀번호 찾기 페이지로 이동  
- - 아이디, 이름, 휴대폰번호 정보 입력시 비밀번호의 앞 3자리, 뒷 1자리 출력   
+ - 출퇴근 기록: 실시간 출근 및 퇴근 체크 기능으로 근태 기록 자동화.
+ - 근태 조회 및 수정 요청: 근무자가 본인의 출퇴근 기록을 확인하고 오류 발생 시 수정 요청 가능.
+  
    
 ![인사발령][인사발령]  
- - 로그인 모달 내부 "카카오 로그인" 버튼 클릭시 카카오 로그인 페이지로 이동  
- - 약관 동의를 마치면 카카오 로그인 API를 활용한 간편 로그인 가능   
+ - 발령 내역 조회 및 관리: 직원의 인사 발령 이력을 조회 및 관리하며, 발령 사항 상세 보기 제공.
+ - 직급/부서 변경 신청: 관리자가 발령 요청을 승인하거나 반려하며, 변경 사항 이력 저장.
+ 
    
 ![휴가][휴가]  
- - 로그인 후, 프로필 이미지 또는 마이페이지 버튼 클릭시 프로필 페이지로 이동  
- - 사용자가 작성한 게시글을 지도상에 출력  
- - 팔로잉, 팔로워 버튼 클릭시 팔로잉, 팔로워 모달에 리스트 출력  
- - 모달 내부에서 팔로우 기능 활용 가능  
- - 본인이 작성한 게시글과 본인이 저장한 게시글 리스트를 확인 가능   
+ - 휴가 신청 및 승인: 직원이 원하는 휴가 일정을 신청하면 관리자가 승인/반려 가능.
+ - 연차 관리: 남은 연차 및 사용한 연차를 실시간으로 확인할 수 있는 기능 제공.
+ - 휴가 이력 관리: 과거 휴가 내역을 날짜, 사유, 승인 상태로 확인 가능.   
    
 ![결재][결재]  
- - 프로필 페이지의 "게시글 쓰기" 버튼 또는 전체 게시글 리스트의 "+" 버튼 클릭시 게시글 작성 페이지로 이동  
- - 게시글의 사진, 제목, 위치, 내용 입력 후 등록시 게시글 작성 가능  
- - 게시글 내용 입력은 위지위그 에디터인 썸머노트를 활용하였음  
- - "위치" 버튼 클릭시 출력되는 지도 모달 내에서 찾고자 하는 위치 검색 가능   
+ - 전자결재 시스템: 결재 문서를 작성하고 단계별 승인 프로세스를 설정할 수 있는 기능 제공.
+ - 결재 진행 상태 확인: 결재 대기, 진행, 승인, 반려 등 단계별 상태를 실시간 확인 가능.
+ - 결재 이력 관리: 승인 완료된 결재 문서와 반려 사유를 기록하여 투명한 관리 보장.
    
 #### **4. 트러블 슈팅**
  * 게시글의 순서가 매번 다르게 로딩되는 문제가 발생함  
@@ -143,17 +141,17 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
   
 #### **5. 느낀점**
 
- * **팀워크와 소통**: 협업의 중요성을 체감하며, 백엔드 개발자로서의 팀워크 능력을 강화함  
+ * **팀워크와 소통의 중요성**: 협업의 중요성을 체감하며, 백엔드 개발자로서의 팀워크 능력을 강화함  
 
- * **기술적 도전**: 무한 스크롤, 지도 API, 에디터 문제 해결을 통해 문제 해결 능력을 향상함  
+ * **기술적 도전과 성장**: 복잡한 로직 구현과 데이터베이스 최적화를 통해 기술적 역량을 한 단계 높이고 문제 해결하며 성취감을 느낌  
 
- * **데이터베이스 설계**: 데이터베이스 정규화 및 설계 경험을 통해 데이터 관리와 설계 능력을 강화함  
+ * **효율적인 데이터 관리**: 데이터베이스 설계를 통해 정규화와 관계 설정의 중요성을 깨닫고 실무적인 설계 능력을 강화함  
 
- * **시간 관리**: 프로젝트 일정 관리 경험을 통해 효율적인 개발 및 계획 수정의 중요성을 배움  
+ * **시간 관리**: 일정 재조정과 효율적 작업 방식을 통해 계획 수립과 실행의 중요성을 배움 
 
- * **커뮤니케이션과 관리**: 프로젝트 관리와 커뮤니케이션의 중요성을 깨달으며, 향후 팀 내 작업 조율에 도움이 될 것임  
+ * **책임감과 주도성**: 주어진 역할에 책임감을 가지고 문제를 해결하며 주도적으로 의견을 제시해 리더십을 키움  
 
-이 프로젝트를 통해 얻은 경험과 지식은 앞으로의 개발 및 협업에 큰 도움이 될 것입니다. 팀원들과 함께 만든 결과물에 대해 자부심을 느끼며, 다음 단계의 도전이 기대됩니다.  
+이번 프로젝트는 단순히 기술을 익히는 데 그치지 않고, 팀워크와 문제 해결, 그리고 개발자로서의 성장을 이룰 수 있는 소중한 경험이었습니다. 
 
 [프로젝트 개요 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#1-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EC%9A%94
 [프로젝트 주제 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%A3%BC%EC%A0%9C
