--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -123,7 +123,7 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
  - 결재 진행 상태 확인: 결재 대기, 진행, 승인, 반려 등 단계별 상태를 실시간 확인 가능.
  - 결재 이력 관리: 승인 완료된 결재 문서와 반려 사유를 기록하여 투명한 관리 보장.
    
-#### **4. 트러블 슈팅**
+<!-- #### **4. 트러블 슈팅**
  * 게시글의 순서가 매번 다르게 로딩되는 문제가 발생함  
    - fetch 기능을 활용해 비동기식으로 리스트를 불러오는 도중 발생한 문제임을 파악함  
    - fetch구문을 async 함수 내부에 위치시키고, await를 사용하여 순서대로 게시글이 로딩되게 처리함  
@@ -138,7 +138,7 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
  * 게시글 리스트 정렬 방식 변경시 html 소스 코드 상에는 객체가 존재하나 화면상에 출력되지 않는 문제가 발생함  
    - 리스트 로딩시 애니메이션 등은 외부 템플릿의 css, js를 사용하였는데, 한번 배치된 리스트를 재배치할수 없게 설계되어있음을 확인함   
    - 로딩 애니메이션 및 스타일 등을 담당하는 css, js 코드를 분석하여 동일한 기능을 하는 코드를 재작성하여 문제를 해결함   
-  
+   -->
 #### **5. 느낀점**
 
  * **팀워크와 소통의 중요성**: 협업의 중요성을 체감하며, 백엔드 개발자로서의 팀워크 능력을 강화함  
