--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -118,10 +118,10 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
  - 연차 관리: 남은 연차 및 사용한 연차를 실시간으로 확인할 수 있는 기능 제공.
  - 휴가 이력 관리: 과거 휴가 내역을 날짜, 사유, 승인 상태로 확인 가능.   
    
-![결재][결재]  
+<!-- ![결재][결재]  
  - 전자결재 시스템: 결재 문서를 작성하고 단계별 승인 프로세스를 설정할 수 있는 기능 제공.
  - 결재 진행 상태 확인: 결재 대기, 진행, 승인, 반려 등 단계별 상태를 실시간 확인 가능.
- - 결재 이력 관리: 승인 완료된 결재 문서와 반려 사유를 기록하여 투명한 관리 보장.
+ - 결재 이력 관리: 승인 완료된 결재 문서와 반려 사유를 기록하여 투명한 관리 보장. -->
    
 <!-- #### **4. 트러블 슈팅**
  * 게시글의 순서가 매번 다르게 로딩되는 문제가 발생함  
