--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -139,7 +139,7 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
    - 리스트 로딩시 애니메이션 등은 외부 템플릿의 css, js를 사용하였는데, 한번 배치된 리스트를 재배치할수 없게 설계되어있음을 확인함   
    - 로딩 애니메이션 및 스타일 등을 담당하는 css, js 코드를 분석하여 동일한 기능을 하는 코드를 재작성하여 문제를 해결함   
    -->
-#### **5. 느낀점**
+#### **느낀점**
 
  * **팀워크와 소통의 중요성**: 협업의 중요성을 체감하며, 백엔드 개발자로서의 팀워크 능력을 강화함  
 
