--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -182,7 +182,7 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 
 [로그인 조직관리]: https://kimhaerinring.github.io/assets/img/Login.gif
 [공지사항]: https://kimhaerinring.github.io/assets/img/Notice.gif
-[캘린더]: https://kimhaerinring.github.io/img/Calender.gif
+[캘린더]: https://kimhaerinring.github.io/assets/img/Calender.gif
 [근퇴 관리]: https://kimhaerinring.github.io/assets/img/Profile.gif
 
 [인사발령]: https://kimhaerinring.github.io/assets/img/Appointment.gif
