--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -103,9 +103,9 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
  - 일정 알림 기능: 설정된 일정에 대한 사전 알림으로 중요한 약속 누락 방지.
  - 다양한 뷰 옵션: 월간, 주간, 일간 보기 제공으로 유연한 일정 관리 가능.   
    
-![근퇴 관리][근퇴 관리]  
+<!-- ![근퇴 관리][근퇴 관리]  
  - 출퇴근 기록: 실시간 출근 및 퇴근 체크 기능으로 근태 기록 자동화.
- - 근태 조회 및 수정 요청: 근무자가 본인의 출퇴근 기록을 확인하고 오류 발생 시 수정 요청 가능.
+ - 근태 조회 및 수정 요청: 근무자가 본인의 출퇴근 기록을 확인하고 오류 발생 시 수정 요청 가능. -->
   
    
 ![인사발령][인사발령]  
