--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -1,14 +1,13 @@
 ---
-title: 깃허브 블로그 첫 번째 게시글
+title: 개발자 김해린의 포트폴리오
 date: 2024-09-01 15:21:00 +0900
 categories: [Blogging, Notice]
 tags: [first, github blog]     # TAG names should always be lowercase
 media_subpath: '/posts/20240901'
 ---
 
-## 첫 번째 게시글 입니다.
+김해린 (KIM HAE RIN)
+TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
 
-이 블로그는 제 개인의 경험을 서술한 **포트폴리오**가 주된 주제이며,  
-이외에는 **공부 내용**, **관심 분야** 등이 게시될 예정입니다.
-
-감사합니다.
+나의 강점 두줄로 
+<a style="width:44px; height: 44px;" class="social-icon" href="https://github.com/YooHyeok" target="_blank">
