--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -6,8 +6,7 @@ tags: [first, github blog]     # TAG names should always be lowercase
 media_subpath: '/posts/20240901'
 ---
 
-김해린 (KIM HAE RIN)
-TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
+# 김해린 (KIM HAE RIN)
+### TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
 
 나의 강점 두줄로 
-<a style="width:44px; height: 44px;" class="social-icon" href="https://github.com/YooHyeok" target="_blank">
