--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -7,6 +7,40 @@ media_subpath: '/posts/20240901'
 ---
 
 # 김해린 (KIM HAE RIN)
-### TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
+#### TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
 
-나의 강점 두줄로 
+> 나의 강점 두줄로 
+
+깃허브 주소
+[인라인 링크](https://velog.io/)
+
+url 링크는 아래처럼
+<https://velog.io/>
+
+참조 링크
+[github]:(https://velog.io/)
+***
+
+`인라인 코드 이렇게 하냐?`
+
+
+***
+
+# 학력사항
+
+
+***
+
+# 기술 자격증
+
+
+***
+
+# 교육이수
+
+
+***
+# SKILLS
+
+***
+# TEAMPROJECT
