--- a/_posts/2024-09-01-프로젝트-PIC-MAP-포트폴리오.md
+++ b/_posts/2024-09-01-프로젝트-PIC-MAP-포트폴리오.md
@@ -158,7 +158,7 @@ GitHub URL : [**https://github.com/kimhaerinring/PicMap-project**](https://githu
 [프로젝트 개발 환경 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD
 [기능 구현 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#3-%EA%B8%B0%EB%8A%A5-%EA%B5%AC%ED%98%84
 [트러블 슈팅 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#4-%ED%8A%B8%EB%9F%AC%EB%B8%94-%EC%8A%88%ED%8C%85
-[느낀점 링크]: https://kimhaerinring.github.io/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#5-%EB%8A%90%EB%82%80%EC%A0%90
+[느낀점 링크]: https://kimhaerinring.github.io/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/#5-%EB%8A%90%EB%82%80%EC%A0%90
 
 [요구사항 정의서 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1uQJl9_ASPbSN-qPA1adEvE_afG3JeTlwwGDaPCMKUxc/edit?gid=1477875131#gid=1477875131
 [WBS 스프레드시트 링크]: https://docs.google.com/spreadsheets/d/1uQJl9_ASPbSN-qPA1adEvE_afG3JeTlwwGDaPCMKUxc/edit?gid=1379820161#gid=1379820161
