--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -7,7 +7,7 @@ media_subpath: '/posts/20240901'
 ---
 
 # **김해린 (KIM HAE RIN)**
-#### TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
+##### TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
 
 > 나의 강점 두줄로 
 
@@ -18,11 +18,11 @@ media_subpath: '/posts/20240901'
 ***
 ### **목차**
 
-1. [학력사항][학력사항]
-2. [기술 자격증][기술 자격증]
-3. [교육 이수][교육 이수]
-4. [SKILLS][SKILLS]
-5. [프로젝트 포토폴리오][프로젝트 포토폴리오]
+1. [학력사항](학력사항)
+2. [기술 자격증](기술-자격증)
+3. [교육 이수](교육이수)
+4. [SKILLS](SKILLS)
+5. [프로젝트 포토폴리오](TEAMPROJECT)
 
 `인라인 코드 이렇게 하냐?`
 
