--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -18,32 +18,34 @@ media_subpath: '/posts/20240901'
 ***
 ### **목차**
 
-1. [학력사항](#학력사항)
-2. [기술 자격증](#기술-자격증)
-3. [교육 이수](#교육이수)
-4. [SKILLS](#SKILLS)
-5. [프로젝트 포토폴리오](#TEAMPROJECT)
+1. [학력사항](#education)
+2. [기술 자격증](#certifications)
+3. [교육 이수](#education-history)
+4. [SKILLS](#skills)
+5. [프로젝트 포트폴리오](#team-project)
 
 `인라인 코드 이렇게 하냐?`
 
 
 ***
 
-## 학력사항
 
+## 학력사항 {#education}
 
-***
-
-# 기술 자격증
 
 
 ***
 
-# 교육이수
+## 기술 자격증 {#certifications}
 
 
 ***
-# SKILLS
+
+## 교육 이수 {#education-history}
+
 
 ***
-# TEAMPROJECT
+## SKILLS {#skills}
+
+***
+## 프로젝트 포트폴리오 {#team-project}
