깃헙주소 추가

--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -7,7 +7,7 @@ media_subpath: '/posts/20240901'
 ---
 
 # **김해린 (KIM HAE RIN)**
->TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com
+>TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub](https://github.com/kimhaerinring)
 
 ##### 나의 강점 두줄로 
 
