--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -7,12 +7,10 @@ media_subpath: '/posts/20240901'
 ---
 
 # **김해린 (KIM HAE RIN)**
->TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub](https://github.com/kimhaerinring)
+>TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub 주소](https://github.com/kimhaerinring)
 
 ##### 나의 강점 두줄로 
 
-깃허브 주소
-[GitHub](https://github.com/kimhaerinring)
 
 
 ***
@@ -31,6 +29,10 @@ media_subpath: '/posts/20240901'
 
 
 ## 학력사항 {#education}
+Academic Credit Bank System
+컴퓨터 공학과 학사
+졸업
+
 
 
 
@@ -38,14 +40,84 @@ media_subpath: '/posts/20240901'
 
 ## 기술 자격증 {#certifications}
 
+SQL 개발자 (SQLD)
+한국데이터산업진흥원
+
+
+컴퓨터 활용 능력 2급
+대한상공회의소
+
+
 
 ***
 
 ## 교육 이수 {#education-history}
 
+구디아카데미
+K-Digital 훈련 과정
+클라우드 활용 자바개발자 양성과정
+2023.11.13 - 2024.05.14
 
 ***
 ## SKILLS {#skills}
+
+[ Language ]
+JAVA
+- 자바 문법 습득
+- JDBC 개념 이해 및 데이터베이스와 연동
+- GUI에 대한 이해와 AWT 활용
+- 이벤트의 개념과 이벤트 처리 방식의 이해 및 활용 가능
+- 간단한 계산기 및 달력 구현
+JSP
+- Model1 / Model2 기반 개발
+- Java Bean을 활용, Set/Get 메소드를 이용해 DB와 연동하여 DB 입출력
+- JSTL & EL표현식 활용
+Thymeleaf
+- Set/Get 메소드를 이용해 DB와 연동하여 DB 입출력
+- EL표현식 활용
+CSS
+- 기초 UI 설계 및 기본 문법 습득
+JavaScript (VanilaJS)
+- VanilaJS 자바스크립트 기본 문법 습득
+- JQuery 및 AJax 문법 습득
+ReactJS
+- ReactJS 라이프사이클 원리 이해
+- React Class및 function형 컴포넌트 이해 및 설계 가능
+- props, context, Redux 문법 습득 및 사용 가능
+- Axios 비동기 통신 문법 습득 및 사용 가능
+JSON
+HTML5
+XML
+[ DBMS ]
+Oracle 18C | 11g | MySQL
+- DB 설치 및 기본 SQL 작성
+- DB 모델링 기법 및 정규화
+- 트랜잭션의 개념과 처리 방법과 PL/SQL 작성
+[ WAS ]
+Tomcat9.0
+- 서버구축 작업 및 사용 가능
+[ TOOL ]
+IDE / DB Tool
+- Eclipse를 이용한 자바 코드 작성
+- Spring Tool Suite를 이용한 자바 코드 작성
+- IntelliJ를 이용한 자바 코드 작성
+- StarUML를 이용한 UML 구조 작성
+[ Framework ]
+Dependencies
+- Maven 방식의 Dependencies 관리 가능
+- Gradle 방식의 Dependencies 관리 가능
+Spring MVC
+- 어노테이션 기반 Controller 구현 가능
+- Spring MVC패턴 이용 WebApp 제작
+Security
+- 쿠키 및 세션 방식 로그인 처리 구현 가능
+- Spring Security 로그인 보안 처리 구현 가능
+- JWT Json Web Token 방식 구현 가능
+MyBatis
+- XML을 통해 SQL statement에 매핑 가능
+Hibernate
+- 영속성 컨텍스트 및 Entity 에 대한 이해
+- Spring JPA 연동 가능
 
 ***
 ## 프로젝트 포트폴리오 {#team-project}
