--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -121,8 +121,8 @@ Hibernate
 
 ***
 ## **프로젝트 포트폴리오** {#team-project}
-<article class="card-wrapper card"> <a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="card-body d-flex flex-column"><h1 class="card-title my-2 mt-md-0">프로젝트 PIC MAP 포트폴리오</h1><div class="card-text content mt-0 mb-3"><p>프로젝트 PIC MAP 주 제 : 여행 경험 공유, 위치 기반 여행지 추천 웹 플랫폼 기 간 : 2024-08-01 ~ 2024-08-30 팀 원 : 김해린, 이시우, 박찬솔, 신정호 담당 역할 : 프로젝트 개발 수행 업무 : 사용자 계정 생성 카카오 로그인 마이페이지 내 정보 수정, 삭제 구현 소셜 기능 ( 1대1 팔로잉, 팔로우 ...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Sep 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div></a></article>
+<article class="card-wrapper card"> <a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="card-body d-flex flex-column"><h3 class="card-title my-2 mt-md-0">프로젝트 PIC MAP 포트폴리오</h3><div class="card-text content mt-0 mb-3"><p>프로젝트 PIC MAP 주 제 : 여행 경험 공유, 위치 기반 여행지 추천 웹 플랫폼 기 간 : 2024-08-01 ~ 2024-08-30 팀 원 : 김해린, 이시우, 박찬솔, 신정호 담당 역할 : 프로젝트 개발 수행 업무 : 사용자 계정 생성 카카오 로그인 마이페이지 내 정보 수정, 삭제 구현 소셜 기능 ( 1대1 팔로잉, 팔로우 ...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Sep 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div></a></article></br>
 
 
 
-<article class="card-wrapper card"> <a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="col-md-12"><div class="card-body d-flex flex-column"><h1 class="card-title my-2 mt-md-0">프로젝트 COMPANY 포트폴리오</h1><div class="card-text content mt-0 mb-3"><p>프로젝트 NULL COMPANY 주 제 : 사원 정보를 디지털로 관리하고, 사원들의 온라인 업무를 관리하는 그룹웨어(GROUPWARE) 기 간 : 2024-10-01 ~ 2024-11-08 팀 원 : 김해린, 이시우, 고경환, 이정효, test 담당 역할 : 프로젝트 개발 수행 업무 : 출퇴근 시스템 / 근태관리 휴가 결재 구현 휴가 관...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Oct 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div></a></article>
+<article class="card-wrapper card"> <a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="col-md-12"><div class="card-body d-flex flex-column"><h3 class="card-title my-2 mt-md-0">프로젝트 COMPANY 포트폴리오</h3><div class="card-text content mt-0 mb-3"><p>프로젝트 NULL COMPANY 주 제 : 사원 정보를 디지털로 관리하고, 사원들의 온라인 업무를 관리하는 그룹웨어(GROUPWARE) 기 간 : 2024-10-01 ~ 2024-11-08 팀 원 : 김해린, 이시우, 고경환, 이정효, test 담당 역할 : 프로젝트 개발 수행 업무 : 출퇴근 시스템 / 근태관리 휴가 결재 구현 휴가 관...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Oct 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div></a></article>
