포폴 수정중

--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -29,24 +29,25 @@ TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub 주소](https
 
 
 ## **학력사항** {#education}
-Academic Credit Bank System
-컴퓨터 공학과 학사
-졸업
+Academic Credit Bank System(4년제) 
+컴퓨터공학
+2024.11 ~ 재학중
+연성대학교(2·3년제) 
+관광 영어학과
+2019.03 ~ 2021.01 (졸업)
 
-
+원미고등학교 
 
 
 ***
 
 ## **기술 자격증** {#certifications}
 
-SQL 개발자 (SQLD)
-한국데이터산업진흥원
+SQL개발자(SQLD자격)
+한국데이터베이스진흥센터  
 
-
-컴퓨터 활용 능력 2급
+컴퓨터활용능력2급
 대한상공회의소
-
 
 
 ***
@@ -56,8 +57,12 @@ SQL 개발자 (SQLD)
 구디아카데미
 K-Digital 훈련 과정
 클라우드 활용 자바개발자 양성과정
-2023.11.13 - 2024.05.14
+2024.05.16 ~ 2024.11.12
+총 119일 / 946시간
 
+-WEB Front-End : Html, CSS, Java Script, jQuery
+-Web Back-End: Java, Spring Boot Framework, Spring Framework, Mybatis Framework, JSP
+-Data Base : Oracle DB, Maria DB
 ***
 ## **SKILLS** {#skills}
 
