--- a/_posts/2024-09-01-GITHUB-블로그-시작.md
+++ b/_posts/2024-09-01-GITHUB-블로그-시작.md
@@ -8,8 +8,10 @@ media_subpath: '/posts/20240901'
 
 # **김해린 (KIM HAE RIN)**
 TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub 주소](https://github.com/kimhaerinring)
+<br/>
+> 저는 새로운 기술과 지식을 배우는 데 주저하지 않는 개발자입니다. 도전을 두려워하기보다는 이를 성장의 발판으로 삼아, 문제를 해결하고 더 나은 시스템을 구축하는 데 집중합니다. 끊임없이 학습하며, 변화하는 환경 속에서도 유연하게 적응해 지속적으로 발전해 나가고싶습니다.
 
-> 나의 강점 두줄로 
+
 
 
 
@@ -22,47 +24,48 @@ TEL. 010-6243-9426  |   E-mail. rlagofls0824@gmail.com  |  [GitHub 주소](https
 4. [SKILLS](#skills)
 5. [프로젝트 포트폴리오](#team-project)
 
-`인라인 코드 이렇게 하냐?`
 
 
 ***
 
 
 ## **학력사항** {#education}
-Academic Credit Bank System(4년제) 
-컴퓨터공학
-2024.11 ~ 재학중
-연성대학교(2·3년제) 
-관광 영어학과
-2019.03 ~ 2021.01 (졸업)
+Academic Credit Bank System(4년제) <br/>
+컴퓨터공학<br/>
+2024.11 ~ 재학중 <br/> <br/>               
 
-원미고등학교 
+연성대학교(2·3년제) <br/>
+관광 영어학과<br/>
+2019.03 ~ 2021.01 (졸업) <br/><br/>                                
+
+원미고등학교 <br/>
+(졸업)
 
 
 ***
 
 ## **기술 자격증** {#certifications}
 
-SQL개발자(SQLD자격)
-한국데이터베이스진흥센터  
+SQL개발자(SQLD자격)<br/>
+한국데이터베이스진흥센터<br/><br/>  
 
-컴퓨터활용능력2급
-대한상공회의소
+컴퓨터활용능력2급<br/>
+대한상공회의소<br/><br/>
 
 
 ***
 
 ## **교육 이수** {#education-history}
 
-구디아카데미
-K-Digital 훈련 과정
-클라우드 활용 자바개발자 양성과정
-2024.05.16 ~ 2024.11.12
-총 119일 / 946시간
+구디아카데미<br/>
+K-Digital 훈련 과정<br/>
+클라우드 활용 자바개발자 양성과정<br/>
+2024.05.16 ~ 2024.11.12<br/>
+총 119일 / 946시간<br/><br/>
 
--WEB Front-End : Html, CSS, Java Script, jQuery
--Web Back-End: Java, Spring Boot Framework, Spring Framework, Mybatis Framework, JSP
--Data Base : Oracle DB, Maria DB
+-WEB Front-End : Html, CSS, Java Script, jQuery<br/>
+-Web Back-End: Java, Spring Boot Framework, Spring Framework, Mybatis Framework, JSP<br/>
+-Data Base : Oracle DB, Maria DB<br/>
 ***
 ## **SKILLS** {#skills}
 
@@ -128,6 +131,7 @@ Hibernate
 ## **프로젝트 포트폴리오** {#team-project}
 <article class="card-wrapper card"> <a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-PIC-MAP-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="card-body d-flex flex-column"><h3 class="card-title my-2 mt-md-0">프로젝트 PIC MAP 포트폴리오</h3><div class="card-text content mt-0 mb-3"><p>프로젝트 PIC MAP 주 제 : 여행 경험 공유, 위치 기반 여행지 추천 웹 플랫폼 기 간 : 2024-08-01 ~ 2024-08-30 팀 원 : 김해린, 이시우, 박찬솔, 신정호 담당 역할 : 프로젝트 개발 수행 업무 : 사용자 계정 생성 카카오 로그인 마이페이지 내 정보 수정, 삭제 구현 소셜 기능 ( 1대1 팔로잉, 팔로우 ...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Sep 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div></a></article>
 
+<br/><br/>
 
 <article class="card-wrapper card"><a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="col-md-12"><div class="card-body d-flex flex-column"><h3 class="card-title my-2 mt-md-0">프로젝트 COMPANY 포트폴리오</h3><div class="card-text content mt-0 mb-3"><p>프로젝트 NULL COMPANY 주 제 : 사원 정보를 디지털로 관리하고, 사원들의 온라인 업무를 관리하는 그룹웨어(GROUPWARE) 기 간 : 2024-10-01 ~ 2024-11-08 팀 원 : 김해린, 이시우, 고경환, 이정효, test 담당 역할 : 프로젝트 개발 수행 업무 : 출퇴근 시스템 / 근태관리 휴가 결재 구현 휴가 관...</p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Oct 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div>
 
