--- a/_posts/2024-09-01-GITHUB-김해린-포토폴리오.md
+++ b/_posts/2024-09-01-GITHUB-김해린-포토폴리오.md
@@ -70,61 +70,61 @@ K-Digital 훈련 과정<br/>
 ***
 ## **SKILLS** {#skills}
 
-[ Language ]
-JAVA
+#### [ Language ]
+##### JAVA
 - 자바 문법 습득
 - JDBC 개념 이해 및 데이터베이스와 연동
 - GUI에 대한 이해와 AWT 활용
 - 이벤트의 개념과 이벤트 처리 방식의 이해 및 활용 가능
 - 간단한 계산기 및 달력 구현
-JSP
+##### JSP
 - Model1 / Model2 기반 개발
 - Java Bean을 활용, Set/Get 메소드를 이용해 DB와 연동하여 DB 입출력
 - JSTL & EL표현식 활용
-Thymeleaf
+##### Thymeleaf
 - Set/Get 메소드를 이용해 DB와 연동하여 DB 입출력
 - EL표현식 활용
-CSS
+##### CSS
 - 기초 UI 설계 및 기본 문법 습득
-JavaScript (VanilaJS)
-- VanilaJS 자바스크립트 기본 문법 습득
+##### JavaScript 
+- 자바스크립트 기본 문법 습득
 - JQuery 및 AJax 문법 습득
-ReactJS
+##### ReactJS
 - ReactJS 라이프사이클 원리 이해
 - React Class및 function형 컴포넌트 이해 및 설계 가능
 - props, context, Redux 문법 습득 및 사용 가능
 - Axios 비동기 통신 문법 습득 및 사용 가능
-JSON
-HTML5
-XML
-[ DBMS ]
-Oracle 18C | 11g | MySQL
+##### JSON
+##### HTML5
+##### XML
+#### [ DBMS ]
+##### Oracle 18C | 11g | MySQL
 - DB 설치 및 기본 SQL 작성
 - DB 모델링 기법 및 정규화
 - 트랜잭션의 개념과 처리 방법과 PL/SQL 작성
-[ WAS ]
-Tomcat9.0
+#### [ WAS ]
+##### Tomcat9.0
 - 서버구축 작업 및 사용 가능
-[ TOOL ]
-IDE / DB Tool
+#### [ TOOL ]
+##### IDE / DB Tool
 - Eclipse를 이용한 자바 코드 작성
 - Spring Tool Suite를 이용한 자바 코드 작성
 - IntelliJ를 이용한 자바 코드 작성
 - StarUML를 이용한 UML 구조 작성
-[ Framework ]
-Dependencies
+#### [ Framework ]
+##### Dependencies
 - Maven 방식의 Dependencies 관리 가능
 - Gradle 방식의 Dependencies 관리 가능
-Spring MVC
+##### Spring MVC
 - 어노테이션 기반 Controller 구현 가능
 - Spring MVC패턴 이용 WebApp 제작
-Security
+##### Security
 - 쿠키 및 세션 방식 로그인 처리 구현 가능
 - Spring Security 로그인 보안 처리 구현 가능
 - JWT Json Web Token 방식 구현 가능
-MyBatis
+##### MyBatis
 - XML을 통해 SQL statement에 매핑 가능
-Hibernate
+##### Hibernate
 - 영속성 컨텍스트 및 Entity 에 대한 이해
 - Spring JPA 연동 가능
 
