--- a/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
+++ b/_posts/2024-10-01-프로젝트-COMPANY-포트폴리오.md
@@ -9,7 +9,7 @@ pin: true
 
 ## 프로젝트 NULL COMPANY
 
-주 제 : **사원 정보를 디지털로 관리하고, 사원들의 온라인 업무를 관리하는 그룹웨어(GROUPWARE)**  
+주 제 : **ERP**  
 기 간 : 2024-10-01 ~ 2024-11-08  
 팀 원 : **김해린**, 이시우, 고경환, 이정효, test
 담당 역할 : 프로젝트 개발  
@@ -19,19 +19,6 @@ pin: true
   - 휴가 관리자 관리
   - 인사 발령 구현
   - 최종 문서 작성
-  회사 그룹웨어 시스템
-
-**프로젝트 개요**
-
-목적: 회사 내 효율적인 소통과 업무 관리를 지원하기 위한 그룹웨어 시스템 개발
-
-주요 기능:
-- 출퇴근 관리: 출근/퇴근 시간 기록 및 조회 기능
-- 휴가 관리: 휴가 신청, 승인/반려, 잔여 휴가 조회
-- 전자결재: 업무 보고서 및 결재 문서 작성 및 프로세스 관리
-- 일정 관리: 개인/부서 일정 등록 및 공유
-- 게시판: 공지사항, 자유게시판, Q&A 등 사내 커뮤니케이션 지원
-
 
 GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.com/kimhaerinring/null_company)  
 최종 Branch : master  
@@ -84,6 +71,7 @@ GitHub URL : [**https://github.com/kimhaerinring/null_company**](https://github.
 ![데이터베이스 정의 (ERDCLOUD)][데이터베이스 정의 이미지 (ERDCLOUD)]  
  - 위는 데이터베이스를 ERD로 표현한 그림임.  
  - 데이터 베이스는 2차 정규화까지 진행되었으나, 반정규화를 거친 일부 테이블 외에는 3차 정규화까지 진행되었음   
+ - 각  테이블마다 분담하여 색을 다르게 표현함
    
 #### **3. 기능 구현**
 
