--- a/_posts/2024-09-01-GITHUB-김해린-포토폴리오.md
+++ b/_posts/2024-09-01-GITHUB-김해린-포토폴리오.md
@@ -77,8 +77,8 @@ K-Digital 훈련 과정<br/>
 <article class="card-wrapper card"><a href="/posts/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-COMPANY-%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4/" class="post-preview row g-0 flex-md-row-reverse"><div class="col-md-12"><div class="col-md-12"><div class="card-body d-flex flex-column"><h3 class="card-title my-2 mt-md-0">프로젝트 COMPANY 포트폴리오</h3><div class="card-text content mt-0 mb-3"><p>프로젝트 NULL COMPANY 주 제 : EERP 기 간 : 2024-10-01 ~ 2024-11-08 </p></div><div class="post-meta flex-grow-1 d-flex align-items-end"><div class="me-auto"> <i class="far fa-calendar fa-fw me-1"></i> <time>Oct 3, 2024</time></div><div class="pin ms-1"> <i class="fas fa-thumbtack fa-fw"></i></div></div></div></div>
 
 
-***
-## **SKILLS** {#skills}
+<!-- ***
+## **SKILLS** {#skills} -->
 <!-- 
 [ Language ]
 JAVA
